--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main id="corpo">
         <div class="card">
             <div class="img-perfil">
-                <img src="./img-perfil.jpg" alt="Selton Oliveira">
+                <img src="./img/img-perfil.jpg" alt="Selton Oliveira">
             </div>
             <h1>Selton Fiusa</h1>
             <h2>Desenvolvedor Web <br> & <br> Front-End</h2>
