--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <h2>Desenvolvedor Web <br> & <br> Front-End</h2>
             <span></span>
             <div class="links">
-                <a href="#"><i class="bi bi-file-person"></i>Sobre</a>
+                <a href="https://1drv.ms/b/s!AvN8M3heBGOgftkknQaMv0Jpifc?e=MM2IWe"><i class="bi bi-file-person"></i>Currículo</a>
                 <a href="https://wa.me/5515988135690"><i class="bi bi-telephone"></i>Contato</a>
-                <a href="www.linkedin.com/in/selton-fiusa
+                <a href="https://linkedin.com/in/selton-fiusa/
                 "><i class="bi bi-linkedin"></i>Linkedin</a>
                 <a href="https://github.com/SeltonOliveira"><i class="bi bi-github"></i>Github</a>
                 <a href="#"><i class="bi bi-code"></i>Projetos</a>
